# MarioTrickster-MathArt

./: .dimension_uplift_state.json  .gait_blend_state.json  .gitignore  .jakobsen_chain_state.json  .phase3_physics_state.json  .runtime_distill_state.json  .smooth_morphology_state.json  ARCHITECTURE_EVOLUTION.md  ARCH_V6_PLAN.md  AUDIT_REPORT.md  AUDIT_SESSION042.md  AUDIT_SESSION043.md  AUDIT_SESSION044.md  BIOMECHANICS_RESEARCH_NOTES.md  COMMERCIAL_BENCHMARK.md  DEDUP_REGISTRY.json  DISTILL_INTERFACE.md  DISTILL_LOG.md  DISTILL_WORKFLOW.md  EVOLUTION_HISTORY.md  GAP1_GENERALIZED_PHASE_STATE.md  GLOBAL_GAP_ANALYSIS.md  HOW_TO_TALK_TO_AI.md  KNOWLEDGE_DISTILLATION_PROMPT.md  LAYER3_CONVERGENCE_BRIDGE.json  LICENSE  MINE_LOG.md  NEW_COMPUTER_SETUP.md  P1-ARCH-6_TOPOLOGY_DESIGN.md  PHYSDIFF_SUPPLEMENTAL_PLAN.md  PHYSICS_ANIMATION_UPGRADE_PLAN.md  PRECISION_PARALLEL_RESEARCH_PROTOCOL.md  PROJECT_BRAIN.json  README.md  SESSION_029_AUDIT.md  SESSION_039_AUDIT.md  SESSION_040_AUDIT.md  SESSION_HANDOFF.md  SESSION_PROTOCOL.md  SESSION_TRACKER.md  (+88 more)
.obsidian/: workspace.json
MarioTrickster/: __init__.py  __main__.py
_legacy_archive_v5/: ai_render_stream_backend.py
docs/: DORMANT_FEATURES_AUDIT.md  DaC_CONTRACT_SESSION_187.md  RESEARCH_NOTES_SESSION_162.md  RESEARCH_NOTES_SESSION_163.md  RESEARCH_NOTES_SESSION_164.md  RESEARCH_NOTES_SESSION_165.md  RESEARCH_NOTES_SESSION_166.md  RESEARCH_NOTES_SESSION_167.md  RESEARCH_NOTES_SESSION_168.md  RESEARCH_NOTES_SESSION_169.md  RESEARCH_NOTES_SESSION_172.md  RESEARCH_NOTES_SESSION_174.md  RESEARCH_NOTES_SESSION_176.md  RESEARCH_NOTES_SESSION_183.md  RESEARCH_NOTES_SESSION_184.md  RESEARCH_NOTES_SESSION_185.md  RESEARCH_NOTES_SESSION_186.md  RESEARCH_NOTES_SESSION_187.md  RESEARCH_NOTES_SESSION_188.md  RESEARCH_NOTES_SESSION_189.md  RESEARCH_NOTES_SESSION_190.md  RESEARCH_NOTES_SESSION_195.md  RESEARCH_NOTES_SESSION_196.md  RESEARCH_NOTES_SESSION_197.md  RESEARCH_NOTES_SESSION_198.md  RESEARCH_NOTES_SESSION_199.md  RESEARCH_NOTES_SESSION_200.md  RESEARCH_NOTES_SESSION_201.md  RESEARCH_NOTES_SESSION_202.md  SESSION-052-AUDIT.md  SESSION-053-AUDIT.md  SESSION-054-AUDIT.md  SESSION-152-PROVENANCE-AUDIT-DESIGN.md  TROUBLESHOOTING.md  USER_GUIDE.md  gap_analysis_session071.md  session077_external_alignment_audit.md
evolution_reports/: CYCLE-20260416_145724.json  CYCLE-20260416_145737.json  CYCLE-20260416_145754.json  CYCLE-20260416_145807.json  CYCLE-20260416_150314.json  CYCLE-20260416_154834.json  CYCLE-20260417_021436.json  CYCLE-20260417_021908.json  CYCLE-20260417_022006.json  CYCLE-20260417_022757.json  CYCLE-20260417_030159.json  CYCLE-20260417_030217.json  CYCLE-20260417_030234.json  CYCLE-SESSION044.json  layer3_closed_loop_run_to_jump.json  session043_browser_research_notes.md  session044_sdf_rendering_research_notes.md  session046_gapc2_audit.json  session046_gapc2_audit.py  session046_gapc2_research_notes.md  session047_gapb1_audit.json  session047_gapb1_audit.py  session047_gapb1_research_notes.md  session057_p2_audit.md  session058_phase3_audit.md  session059_runtime_cycle.json  session059_unity_orchestrator_audit.md  session060_visual_anti_flicker_audit.md  session060_visual_anti_flicker_cycle.json  session065_full_audit.md  session065_research_status.json
golden/: golden_manifest.json  golden_meta.json
inbox/: README.md  intent.yaml
knowledge/: Chris HartManga Mania.json  anatomy.md  animation.md  anime_frame_rhythm.md  breakwall_phase1.md  color_light.md  color_science.md  compliant_physics_adversarial_priors.md  constraint_wfc_rules.md  differentiable_rendering.md  dimension_uplift_rules.md  fluid_sequence_rules.md  fluid_vfx_rules.md  game_design.md  game_feel.md  industrial_rendering_motion_matching.md  industrial_skin.md  jakobsen_secondary_chain_rules.md  level_design.md  locomotion_cns.md  math_models.json  math_papers.md  pbr_math.md  pcg_math.md  perspective.md  phase3_physics_rules.md  phase_driven_animation.md  physics_sim.md  pipeline_contract.md  pixel_art.md  plant_botany.md  procedural_animation.md  programming.md  rules.json  runtime_distill_bus.md  sdf_math.md  session065_research_rules.json  smooth_morphology_rules.md  state_machine_graph_fuzzing.md  transition_synthesis_runtime_query.md  (+5 more)
logs/: knowledge_audit_trace.json  mathart.log.2026-04-22  mathart.log.2026-04-23  mathart.log.2026-04-24
mathart/: __init__.py  __main__.py  cli.py  cli_wizard.py  headless_e2e_ci.py  headless_graph_fuzz_ci.py  laboratory_hub.py  pipeline.py  pipeline_auditor.py  pipeline_contract.py
research/: bollo_inertialization.txt  extract_pdf_text.py  pujol_chica_2023_notes.md  research_session128_industrial_references.md  research_session129_industrial_references.md  research_session130_industrial_references.md  research_session131_industrial_references.md  sdf_to_mesh_comparison_notes.md  session053_cns_research_notes.md  session054_industrial_skin_research_notes.md  session055_audit_checklist.md  session055_headless_asset_factory_research.md  session056_audit_checklist.md  session056_breakwall_research.md  session057_p2_crossdim_research.md  session058_phase3_working_notes.md  session059_research_notes.md  session060_research_notes.md  session061_audit_report.md  session061_phase3_motion_cognitive_research.md  session062_architecture_design.md  session062_audit_report.md  session062_phase4_env_closedloop_research.md  session063_audit_report.md  session063_phase5_dimension_uplift_research.md  session064_architecture_research.md  session064_audit_report.md  session066_browser_findings_01.md  session066_golden_path_design.md  session066_golden_path_research_framing.md  session067_cli_principles_findings_01.md  session067_dynamic_cli_design.md  session068_architecture_research.md  session069_motion_research_notes.md  session070_implementation_plan.md  session078_browser_notes.md  session079_browser_notes.md  session080_deepmimic_notes.md  session081_xpbd_reference_notes.md  session082_gpu_benchmark_reference_notes.md  (+23 more)
scripts/: cleanup_brain_session073.py  init_brain.py  registry_e2e_guard.py  run_session043_evolution_report.py  (+32 more)
(+572 files in other folders)
