[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathart"
version = "0.46.0"
description = "MarioTrickster Math-Driven Art Pipeline — procedural pixel art generation via OKLAB color science, SDF effects, programmatic skeletal animation, WFC level generation, L-System plants, and knowledge distillation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "scipy>=1.11",
    "openai>=1.0.0",
    "requests>=2.31",
    "optuna>=4.0",
    "numba>=0.65",
    "networkx>=3.2",
    "gymnasium>=0.29,<2",
    # SESSION-144: white-model proxy renderer (Director Studio REPL) depends on matplotlib.
    # It is driven head-less via matplotlib.use("Agg"), so no GUI backend is pulled in.
    "matplotlib>=3.7",
    "PyYAML>=6.0",
    # SESSION-145: Spine preview headless MP4/GIF renderer depends on OpenCV.
    # Uses only cv2.VideoWriter / cv2.line / cv2.circle — zero GUI calls.
    # The headless variant avoids pulling in Qt/GTK display backends.
    "opencv-python-headless>=4.8",
    # SESSION-145: imageio provides a lightweight, Pillow-independent
    # animated-GIF / APNG writer used by future preview export paths.
    # Kept minimal — no ffmpeg plugin auto-download at install time.
    "imageio>=2.31",
    # SESSION-146: psutil is used by PreflightRadar for process-table
    # reverse-lookup (ComfyUI sniffer). Without it, the radar degrades
    # to filesystem-only discovery and logs "psutil not importable".
    "psutil>=5.9",
]

[project.optional-dependencies]
gpu = [
    # SESSION-146: torch is a multi-GB heavy AI runtime. It MUST NOT
    # appear in default dependencies to protect CPU-sandbox sub-second
    # startup. Users who need GPU SDF evaluation or neural rendering
    # install this extra explicitly: `pip install mathart[gpu]`.
    "torch>=2.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "hypothesis>=6.0",
]
ci = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "hypothesis>=6.0",
    "scikit-image>=0.22",
    "opencv-python-headless>=4.8",
]

[project.scripts]
# SESSION-143: Flagship dual-track wizard entry points.
# `mathart` / `mathart-wizard` both route to `mathart.cli:main`, which
# auto-dispatches to `mathart.cli_wizard.run_wizard()` when invoked with
# no args, `wizard`, `guided`, or `--mode ...`.
mathart = "mathart.cli:main"
mathart-wizard = "mathart.cli:main"
mathart-palette = "mathart.oklab.cli:main"
mathart-sdf = "mathart.sdf.cli:main"
mathart-anim = "mathart.animation.cli:main"
mathart-export = "mathart.export.cli:main"
mathart-level = "mathart.level.cli:main"
mathart-distill = "mathart.distill.cli:main"
mathart-evolve = "mathart.evolution.cli:main"
mathart-mine = "mathart.evolution.paper_miner:_cli_entry"
mathart-ci-audit = "mathart.headless_e2e_ci:main"
mathart-graph-fuzz = "mathart.headless_graph_fuzz_ci:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["mathart*"]

[tool.setuptools.package-data]
mathart = ["assets/**/*.json"]
