[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathart"
version = "0.47.0"
description = "MarioTrickster Math-Driven Art Pipeline — procedural pixel art generation via OKLAB color science, SDF effects, programmatic skeletal animation, WFC level generation, L-System plants, and knowledge distillation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "taichi>=1.7.0",
    "Pillow>=10.0",
    "gradio>=4.0",
    "websocket-client>=1.6.0",
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "hypothesis>=6.0",
]
ci = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "hypothesis>=6.0",
]

[project.scripts]
# SESSION-143: Flagship dual-track wizard entry points.
# `mathart` / `mathart-wizard` both route to `mathart.cli:main`, which
# auto-dispatches to `mathart.cli_wizard.run_wizard()` when invoked with
# no args, `wizard`, `guided`, or `--mode ...`.
mathart = "mathart.cli:main"
mathart-wizard = "mathart.cli:main"
mathart-palette = "mathart.oklab.cli:main"
mathart-sdf = "mathart.sdf.cli:main"
mathart-anim = "mathart.animation.cli:main"
mathart-export = "mathart.export.cli:main"
mathart-level = "mathart.level.cli:main"
mathart-distill = "mathart.distill.cli:main"
mathart-evolve = "mathart.evolution.cli:main"
mathart-mine = "mathart.evolution.paper_miner:_cli_entry"
mathart-ci-audit = "mathart.headless_e2e_ci:main"
mathart-graph-fuzz = "mathart.headless_graph_fuzz_ci:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["mathart*"]

[tool.setuptools.package-data]
mathart = ["assets/**/*.json"]
